fix actions menu getting out of view

--- a/css/cospend.css
+++ b/css/cospend.css
@@ -414,7 +414,7 @@ a.billitem .app-content-list-item-icon {
     z-index: 10000 !important;
 }
 
-.popover__wrapper {
+/* .popover__wrapper {
     position: relative;
     top: -10px;
-}
+} */
